syntax="proto3";
package service;

option java_multiple_files=true;
option java_package="com.monyet9.service";

import "google/protobuf/wrappers.proto";
message BankServiceRequest{
  string username=1;
  string password=2;
}

message WithdrawRequest{
  string username =1;
  string password=2;
  string value =3;
}


message WithdrawResponse {
  Money money =1;
}

message Money{
  int32 value =1;
}

message BankServiceResponse{
  string nome=1;
  string cognome=2;
  google.protobuf.Int32Value saldo=3;
}


service BankService{
  // unary request-response sync
  rpc login(BankServiceRequest) returns (BankServiceResponse);

  //server side -- server streaming , invio una richiesta e ricevo piu risposte
  rpc getMoney(WithdrawRequest) returns (stream WithdrawResponse);

}
